[package]
name = "rust_google_oauth2"
version = "0.3.1"
authors = ["Siamion Makarski <s.makarski.s@gmail.com>"]
edition = "2018"

[dependencies]
url = "2.2"
serde = "1"
serde_json = "1.0"
serde_derive = "1.0"
dirs = "4.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
mockito = "0.30.0"

[dev-dependencies]
tokio-test = "*"
serial_test = "*"
